# cabal_coverage_test

./: README.md  cabal.project
src/a/: a.cabal
src/a/src/: A.hs
src/a/unit-test/: Tests.hs
src/b/: b.cabal
src/b/src/: B.hs
