cabal-version: 3.6
name:          a
version:       1

library
    exposed-modules:  A
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -fhide-source-paths

test-suite a-tests
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    build-depends:
        , a
        , base
        , hspec

    hs-source-dirs:   unit-test
    default-language: Haskell2010
    ghc-options:      -Wall -fhide-source-paths
